--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.5.2",
+    "i": "^0.3.7",
     "lottie-react": "^2.4.0",
+    "npm": "^10.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.3",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
